refactor preliminaries and related work

--- a/literature.bib
+++ b/literature.bib
@@ -109,6 +109,17 @@
   institution={RAND CORP SANTA MONICA CA}
 }
 
+@article{menger1927allgemeinen,
+  title={{Zur Allgemeinen Kurventheorie}},
+  author={Menger, Karl},
+  journal={Fundamenta Mathematicae},
+  volume={10},
+  number={1},
+  pages={96--115},
+  year={1927},
+  publisher={Institute of Mathematics Polish Academy of Sciences}
+}
+
 @inproceedings{sleator1981data,
   title={{A Data Structure for Dynamic Trees}},
   author={Sleator, Daniel D and Tarjan, Robert Endre},
