--- a/master_thesis/master_thesis.tex
+++ b/master_thesis/master_thesis.tex
@@ -276,7 +276,7 @@ on something meaningful. Since my bachelor thesis, I work together with Sebastia
 Schlag in the research area of \emph{Hypergraph Partitioning}. The decision to further
 work on this topic was not only a matter of interest, it was mainly a decision based
 on our outstanding interpersonal working relationship. Our intellectual discussions
-were characterized by the right balance of fun and the necessary serious to work towards
+were characterized by the right balance of fun and the necessary seriousness to work towards
 a common goal. I think here is the right place to thank you for the endless time, which I have spent
 in your office over the last three years and which have made me a better computer scientist. \\
 Further, I would like to thank my girl friend Alessa Dreixler. To be together with a 
@@ -336,7 +336,7 @@ I could continue every morning with the same energy and passion as the day befor
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Sparsifying Flow Networks of Hypergraphs}
+\section{Hypergraph Flow Networks}
 \label{sec:opt_flow_network}
 \input{sections/model_flow}
 
