adapt proof of section 4.3

--- a/literature.bib
+++ b/literature.bib
@@ -102,6 +102,17 @@
   chapter     = 3,
 }
 
+@article{newman2004analysis,
+  title={{Analysis of Weighted Networks}},
+  author={Newman, Mark EJ},
+  journal={Physical review E},
+  volume={70},
+  number={5},
+  pages={056131},
+  year={2004},
+  publisher={APS}
+}
+
 @techreport{harris1955,
   title={{Fundamentals of a Method for Evaluating Rail Net Capacities}},
   author={Harris, TE and Ross, FS},
